Created Navigation Bar and Header. Layout for About created

--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine,Roboto">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Great Landing Page Template.
+    <!-- Navigation Bar -->
+    <nav class="nav">
+      <ul>
+        <li>Home</li>
+        <li>About Me</li>
+      </ul>
+    </nav>
+    <!-- Header -->
+    <div class="header">
+      <div class="header-main">Atharva Deosthale</div>
+      <div class="header-tagline">Web Fullstack Developer and Gamer</div>
+    </div>
+    <!-- Section 1 - About -->
+    <div class="about">
+      <div class="heading">ABOUT ME</div>
+      <hr class="seperator">
+    </div>
   </body>
 </html>
